provide usage info for commands in terminal

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -663,12 +663,68 @@ sw_terminal_msg25 = Liste verf\u00fcgbarer Befehle:\n \
 					tcpdump       Datenaustausch anzeigen\n \
 					touch         erstelle Datei\n \
 					traceroute    analysiere Stationen des \u00DCbertragungsweges \n
-sw_terminal_msg26 = Verwende den Befehl 'help' um Liste der verfügbaren Befehle anzuzeigen.
+					
+sw_terminal_arp = arp - show or manipulate Address Resolution Protocol (ARP) table
+sw_terminal_arpsend = arpsend - send an ARP reply
+sw_terminal_cat = cat / type - show file contents
+sw_terminal_cd = cd - change directory
+sw_terminal_copy = copy / cp - copy file
+sw_terminal_del = del / rm - delete file/directory
+sw_terminal_dir = dir / ls - show list of files in current directory
+sw_terminal_exit = exit - exit terminal application
+sw_terminal_help = help - show the list of commands or info on one command
+sw_terminal_host = host - resolve hostname to IP address
+sw_terminal_ipconfig = ipconfig - show network configuration
+sw_terminal_mkdir = mkdir - create directory
+sw_terminal_move = move / mv - move/rename file
+sw_terminal_netstat = netstat - show list of connections
+sw_terminal_nslookup = nslookup - resolve hostname to IP address
+sw_terminal_ping = ping - test connection to other computer
+sw_terminal_pwd = pwd - print working directory
+sw_terminal_route = route - show routing table
+sw_terminal_tcpdump = tcpdump - show data exchange
+sw_terminal_touch = touch - create file
+sw_terminal_traceroute = traceroute - analyse hops of connecting path
+
+sw_terminal_usage_arp = Usage: arp [-d [<IP address>]] [-a <IP address>] \n \
+								-d \t delete ARP entry for IP address or reset ARP table \n \
+								-a \t show ARP entry for specified IP address
+sw_terminal_usage_arpsend = Usage: arpsend <sender IP address> <target IP address>\n \
+								<sender IP address> address to be published for own MAC address\n \
+								<target IP address> target the reply must be sent to
+sw_terminal_usage_cat = Usage: cat <file name>
+sw_terminal_usage_cd = Usage: cd <directory path>
+sw_terminal_usage_copy = Usage: copy <original file> <new file name>
+sw_terminal_usage_del = Usage: del <file | folder> \n \
+								<file | folder> relative path to current directory
+sw_terminal_usage_dir = Usage: dir
+sw_terminal_usage_exit = Usage: exit
+sw_terminal_usage_help = Usage: help [<command>]
+sw_terminal_usage_host = Usage: host <domain> \n \
+								<domain> the domain for which to look up A and MX records
+sw_terminal_usage_ipconfig = Usage: ipconfig
+sw_terminal_usage_mkdir = Usage: mkdir <directory name> \n \
+								<directory name> name of new directory either as absolute path \n \
+												 or relative path
+sw_terminal_usage_move = Usage: move <original file> <new file name>
+sw_terminal_usage_netstat = Usage: netstat
+sw_terminal_usage_nslookup = Usage: nslookup <domain> \n \
+								<domain> the domain for which to look up A (and related NS) records
+sw_terminal_usage_ping = Usage: ping <remote host> \n \
+								<remote host> the remote address as IP address or host name
+sw_terminal_usage_pwd = Usage: pwd
+sw_terminal_usage_route = Usage: route
+sw_terminal_usage_tcpdump = Usage: tcpdump
+sw_terminal_usage_touch = Usage: touch <file name>
+sw_terminal_usage_traceroute = Usage: traceroute <remote host> \n \
+								<remote host> the remote address as IP address or host name
+
+sw_terminal_msg26 = Verwende den Befehl 'help' um Liste der verfügbaren Befehle anzuzeigen\n \
+oder nutze 'help <Befehl>' für weitere Infos zum Befehl.
 sw_terminal_msg28 = hat die IP-Adresse
 sw_terminal_msg29 = Ung\u00fcltige Host-Angabe!\nNur korrekte URLs ohne Pfadangabe erlaubt.\n
 sw_terminal_msg30 = Hostname konnte nicht aufgel\u00f6st werden!\nEventuell ist kein DNS-Server verf\u00fcgbar.\n
 sw_terminal_msg31 = Zeit\u00fcberschreitung! Keine Antwort empfangen.
-sw_terminal_msg32 = Ung\u00fcltige Anzahl Parameter!\n
 sw_terminal_msg33 = Datei erfolgreich kopiert\n
 sw_terminal_msg34 = Datei konnte nicht kopiert werden\n
 sw_terminal_msg35 = Datei erfolgreich verschoben/umbenannt\n
@@ -676,26 +732,16 @@ sw_terminal_msg36 = Datei konnte nicht verschoben/umbenannt werden\n
 sw_terminal_msg37 = Datei erfolgreich gel\u00f6scht\n
 sw_terminal_msg38 = Datei konnte nicht gel\u00f6scht werden\n
 sw_terminal_msg39 = <CE: frei>\n
-sw_terminal_msg40 = Es werden zwei Argumente ben\u00f6tigt:  <quelldatei> <zieldatei>\n
-sw_terminal_msg41 = Es wird ein Argument ben\u00f6tigt:  <verzeichnis/datei>\n
-sw_terminal_msg42 = Kein Parameter erforderlich/m\u00f6glich.\n
-sw_terminal_msg43 = Optional ein Parameter:  <verzeichnis>\n
-sw_terminal_msg44 = Es wird ein Argument ben\u00f6tigt:  <host>\n
 sw_terminal_msg45 = Paketstatistik
 sw_terminal_msg46 = Paket(e) gesendet
 sw_terminal_msg47 = Paket(e) empfangen
 sw_terminal_msg48 = Paketverlust
 sw_terminal_msg49 = | Proto   | Lokale Adresse        | Entfernte Adresse     | Zustand      |\n
 sw_terminal_msg50 = | Internetadresse  | Physische Adresse |\n
-sw_terminal_msg51 = \tAufruf: cat <Dateiname>\n\t        type <Dateiname>\n
 sw_terminal_msg52 = Zieladresse nicht erreichbar
 sw_terminal_msg53 = Ping zu Broadcast-Adressen wird nicht unterst\u00fctzt.
 sw_terminal_msg54 = Datei nicht vorhanden
 sw_terminal_msg55 = Beenden mit Strg+C
-sw_terminal_msg56 = Befehl zum Versenden einer ARP-Antwort\n \
-                      \ Aufruf: arpsend sender_ip target_ip\n \
-                      \ \ \ sender_ip - Zu veröffentlichende IP-Adresse zur eigenen MAC-Adresse\n \
-                      \ \ \ target_ip - IP-Adresse an die die Nachricht zu senden ist
 sw_terminal_msg57 = \n\n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ sSSs   .S  S.       .S   .S       S.     sSSs  \n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ d%%SP  .SS  SS.     .SS  .SS       SS.   d%%SP   \n \
@@ -714,8 +760,6 @@ sw_terminal_msg57 = \n\n \
 
 sw_terminal_msg58 = Mails werden behandelt durch
 
-sw_terminal_trace_msg1 = Benutzung:  traceroute <Ziel-Adresse> \n \
-                    <Ziel-Adresse> ist eine IP-Adresse oder ein Domainname.
 sw_terminal_trace_msg2 = Fehler: Verbindung zum DNS-Server nicht m\u00f6glich.
 sw_terminal_trace_msg3 = Fehler: Domainname konnte nicht aufgel\u00f6st werden.
 sw_terminal_trace_msg4 = Verbindung nach %s wird bestimmt (max. %s Stationen).
