--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -641,7 +641,7 @@ sw_terminal_msg22 = Folder changed!\n
 sw_terminal_msg23 = Test\n
 sw_terminal_msg24 = Successfully built!
 sw_terminal_msg25 = List of available commands:\n \
-                    arp           show Address Resolution Protocol (ARP) table\n \
+                    arp           show or manipulate Address Resolution Protocol (ARP) table\n \
                     arpsend       send an ARP reply\n \
                     cat / type    show file contents \n \
 					cd            change directory\n \
@@ -662,12 +662,68 @@ sw_terminal_msg25 = List of available commands:\n \
 					tcpdump       show data exchange\n \
 					touch         create file\n \
                     traceroute    analyse hops of connecting path \n
-sw_terminal_msg26 = Use command 'help' to show list of available commands.
+                    
+sw_terminal_arp = arp - show or manipulate Address Resolution Protocol (ARP) table
+sw_terminal_arpsend = arpsend - send an ARP reply
+sw_terminal_cat = cat / type - show file contents
+sw_terminal_cd = cd - change directory
+sw_terminal_copy = copy / cp - copy file
+sw_terminal_del = del / rm - delete file/directory
+sw_terminal_dir = dir / ls - show list of files in current directory
+sw_terminal_exit = exit - exit terminal application
+sw_terminal_help = help - show the list of commands or info on one command
+sw_terminal_host = host - resolve hostname to IP address
+sw_terminal_ipconfig = ipconfig - show network configuration
+sw_terminal_mkdir = mkdir - create directory
+sw_terminal_move = move / mv - move/rename file
+sw_terminal_netstat = netstat - show list of connections
+sw_terminal_nslookup = nslookup - resolve hostname to IP address
+sw_terminal_ping = ping - test connection to other computer
+sw_terminal_pwd = pwd - print working directory
+sw_terminal_route = route - show routing table
+sw_terminal_tcpdump = tcpdump - show data exchange
+sw_terminal_touch = touch - create file
+sw_terminal_traceroute = traceroute - analyse hops of connecting path
+
+sw_terminal_usage_arp = Usage: arp [-d [<IP address>]] [-a <IP address>] \n \
+								-d \t delete ARP entry for IP address or reset ARP table \n \
+								-a \t show ARP entry for specified IP address
+sw_terminal_usage_arpsend = Usage: arpsend <sender IP address> <target IP address>\n \
+								<sender IP address> address to be published for own MAC address\n \
+								<target IP address> target the reply must be sent to
+sw_terminal_usage_cat = Usage: cat <file name>
+sw_terminal_usage_cd = Usage: cd <directory path>
+sw_terminal_usage_copy = Usage: copy <original file> <new file name>
+sw_terminal_usage_del = Usage: del <file | folder> \n \
+								<file | folder> relative path to current directory
+sw_terminal_usage_dir = Usage: dir
+sw_terminal_usage_exit = Usage: exit
+sw_terminal_usage_help = Usage: help [<command>]
+sw_terminal_usage_host = Usage: host <domain> \n \
+								<domain> the domain for which to look up A and MX records
+sw_terminal_usage_ipconfig = Usage: ipconfig
+sw_terminal_usage_mkdir = Usage: mkdir <directory name> \n \
+								<directory name> name of new directory either as absolute path \n \
+												 or relative path
+sw_terminal_usage_move = Usage: move <original file> <new file name>
+sw_terminal_usage_netstat = Usage: netstat
+sw_terminal_usage_nslookup = Usage: nslookup <domain> \n \
+								<domain> the domain for which to look up A (and related NS) records
+sw_terminal_usage_ping = Usage: ping <remote host> \n \
+								<remote host> the remote address as IP address or host name
+sw_terminal_usage_pwd = Usage: pwd
+sw_terminal_usage_route = Usage: route
+sw_terminal_usage_tcpdump = Usage: tcpdump
+sw_terminal_usage_touch = Usage: touch <file name>
+sw_terminal_usage_traceroute = Usage: traceroute <remote host> \n \
+								<remote host> the remote address as IP address or host name
+
+sw_terminal_msg26 = Use command 'help' to show list of available commands \n \
+or 'help <command>' for further information on the command.
 sw_terminal_msg28 = has the IP address
 sw_terminal_msg29 = Invalid host string!\nOnly correct URLs without paths are allowed.\n
 sw_terminal_msg30 = Hostname could not be resolved!\nPossibly no DNS server is available.\n
 sw_terminal_msg31 = Timeout! No response received during waiting period.
-sw_terminal_msg32 = Incorrect number of arguments!\n
 sw_terminal_msg33 = File successfully copied\n
 sw_terminal_msg34 = File could not be copied\n
 sw_terminal_msg35 = File successfully moved/renamed\n
@@ -675,26 +731,16 @@ sw_terminal_msg36 = File could not be moved/renamed\n
 sw_terminal_msg37 = File successfully deleted\n
 sw_terminal_msg38 = File could not be deleted\n
 sw_terminal_msg39 = <CE: frei>\n
-sw_terminal_msg40 = Two arguments required:  <sourcefile> <destinationfile>\n
-sw_terminal_msg41 = One argument required:  <directory/file>\n
-sw_terminal_msg42 = No parameter required/allowed.\n
-sw_terminal_msg43 = One optional parameter:  <directory>\n
-sw_terminal_msg44 = One argument required:  <host>\n
 sw_terminal_msg45 = packet statistics
 sw_terminal_msg46 = packet(s) transmitted
 sw_terminal_msg47 = packet(s) received
 sw_terminal_msg48 = packet loss
 sw_terminal_msg49 = | Proto   | Local Address         | Remote Address        | State        |\n
 sw_terminal_msg50 = | Internet Address | Physical Address  |\n
-sw_terminal_msg51 = \tUsage: cat <Dateiname>\n\t       type <Dateiname>\n
 sw_terminal_msg52 = Destination not reachable
 sw_terminal_msg53 = Ping to Broadcast is not supported.
 sw_terminal_msg54 = No such file
 sw_terminal_msg55 = Cancel with Ctrl+C
-sw_terminal_msg56 = Command to send an ARP reply\n \
-                      Usage: arpsend sender_ip target_ip\n \
-                        sender_ip - address to be published for own MAC address\n \
-                        target_ip - target the reply must be sent to
 sw_terminal_msg57 = \n\n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ sSSs   .S  S.       .S   .S       S.     sSSs  \n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ d%%SP  .SS  SS.     .SS  .SS       SS.   d%%SP   \n \
@@ -713,8 +759,6 @@ sw_terminal_msg57 = \n\n \
 
 sw_terminal_msg58 = mail is handled by
 
-sw_terminal_trace_msg1 = Usage:  traceroute <target address> \n \
-                    <target address> is an IP address or domain name.
 sw_terminal_trace_msg2 = Error: could not connect to DNS server.
 sw_terminal_trace_msg3 = Error: domain could not be resolved.
 sw_terminal_trace_msg4 = trace route to %s started (max. %s hops).
