--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -671,12 +671,68 @@ sw_terminal_msg25 = Liste des commandes disponibles:\n \
 					tcpdump       affiche \u00c9changes de donn\u00e9es\n \
 					touch         cr\u00e9e un fichier vide\n \
                     traceroute    analyse les sauts n\u00e9cessaires pour atteindre une destination\n
-sw_terminal_msg26 = Utilise la commande 'help' pour afficher la liste des commandes disponibles.
+                    
+sw_terminal_arp = arp - show or manipulate Address Resolution Protocol (ARP) table
+sw_terminal_arpsend = arpsend - send an ARP reply
+sw_terminal_cat = cat / type - show file contents
+sw_terminal_cd = cd - change directory
+sw_terminal_copy = copy / cp - copy file
+sw_terminal_del = del / rm - delete file/directory
+sw_terminal_dir = dir / ls - show list of files in current directory
+sw_terminal_exit = exit - exit terminal application
+sw_terminal_help = help - show the list of commands or info on one command
+sw_terminal_host = host - resolve hostname to IP address
+sw_terminal_ipconfig = ipconfig - show network configuration
+sw_terminal_mkdir = mkdir - create directory
+sw_terminal_move = move / mv - move/rename file
+sw_terminal_netstat = netstat - show list of connections
+sw_terminal_nslookup = nslookup - resolve hostname to IP address
+sw_terminal_ping = ping - test connection to other computer
+sw_terminal_pwd = pwd - print working directory
+sw_terminal_route = route - show routing table
+sw_terminal_tcpdump = tcpdump - show data exchange
+sw_terminal_touch = touch - create file
+sw_terminal_traceroute = traceroute - analyse hops of connecting path
+
+sw_terminal_usage_arp = Usage: arp [-d [<IP address>]] [-a <IP address>] \n \
+								-d \t delete ARP entry for IP address or reset ARP table \n \
+								-a \t show ARP entry for specified IP address
+sw_terminal_usage_arpsend = Usage: arpsend <sender IP address> <target IP address>\n \
+								<sender IP address> address to be published for own MAC address\n \
+								<target IP address> target the reply must be sent to
+sw_terminal_usage_cat = Usage: cat <file name>
+sw_terminal_usage_cd = Usage: cd <directory path>
+sw_terminal_usage_copy = Usage: copy <original file> <new file name>
+sw_terminal_usage_del = Usage: del <file | folder> \n \
+								<file | folder> relative path to current directory
+sw_terminal_usage_dir = Usage: dir
+sw_terminal_usage_exit = Usage: exit
+sw_terminal_usage_help = Usage: help [<command>]
+sw_terminal_usage_host = Usage: host <domain> \n \
+								<domain> the domain for which to look up A and MX records
+sw_terminal_usage_ipconfig = Usage: ipconfig
+sw_terminal_usage_mkdir = Usage: mkdir <directory name> \n \
+								<directory name> name of new directory either as absolute path \n \
+												 or relative path
+sw_terminal_usage_move = Usage: move <original file> <new file name>
+sw_terminal_usage_netstat = Usage: netstat
+sw_terminal_usage_nslookup = Usage: nslookup <domain> \n \
+								<domain> the domain for which to look up A (and related NS) records
+sw_terminal_usage_ping = Usage: ping <remote host> \n \
+								<remote host> the remote address as IP address or host name
+sw_terminal_usage_pwd = Usage: pwd
+sw_terminal_usage_route = Usage: route
+sw_terminal_usage_tcpdump = Usage: tcpdump
+sw_terminal_usage_touch = Usage: touch <file name>
+sw_terminal_usage_traceroute = Usage: traceroute <remote host> \n \
+								<remote host> the remote address as IP address or host name
+
+sw_terminal_msg26 = Utilise la commande 'help' pour afficher la liste des commandes disponibles \n \
+ou utilise 'help <commande>' pour plus d'information a la commande.
 sw_terminal_msg28 = a pour adresse IP
 sw_terminal_msg29 = Nom d\u2019h\u00f4te incorrect!\nSeuls les URLs sans chemin sont accept\u00e9s.\n
 sw_terminal_msg30 = Nom d\u2019h\u00f4te non r\u00e9solu.\nIl se peut qu\u2019aucun serveur DNS ne soit disponible.\n
 sw_terminal_msg31 = D\u00e9lai \u00e9coul\u00e9! Aucune r\u00e9ponse re\u00e7ue dans le temps imparti.
-sw_terminal_msg32 = Nombre d\u2019arguments incorrect!\n
 sw_terminal_msg33 = Fichier copi\u00e9 avec succ\u00e8s.\n
 sw_terminal_msg34 = Le fichier n\u2019a pas pu \u00eatre copi\u00e9.\n
 sw_terminal_msg35 = Fichier d\u00e9plac\u00e9/renomm\u00e9 avec succ\u00e8s.\n
@@ -684,26 +740,16 @@ sw_terminal_msg36 = Le fichier n\u2019a pas pu \u00eatre d\u00e9plac\u00e9/renom
 sw_terminal_msg37 = Fichier supprim\u00e9 avec succ\u00e8s.\n
 sw_terminal_msg38 = Fichier inexistant ou n\u2019ayant pas pu \u00eatre supprim\u00e9.\n
 sw_terminal_msg39 = <CE: frei>\n
-sw_terminal_msg40 = Deux arguments sont requis:  <fichier source> <fichier destination>\n
-sw_terminal_msg41 = Un argument est requis:  <dossier/fichier>\n
-sw_terminal_msg42 = Aucun argument n\u2019est attendu.\n
-sw_terminal_msg43 = Un argument est optionnel:  <dossier>\n
-sw_terminal_msg44 = Un argument est requis:  <h\u00f4te>\n
 sw_terminal_msg45 = Statistiques des paquets
 sw_terminal_msg46 = paquets transmis
 sw_terminal_msg47 = paquets re\u00e7us
 sw_terminal_msg48 = paquets perdus
 sw_terminal_msg49 = | Proto   | Adresse locale        | Adresse distante      | \u00c9tat         |\n
 sw_terminal_msg50 = |    Adresse IP    |    Adresse MAC    |\n
-sw_terminal_msg51 = \tUsage: cat <nom de fichier>\n\t       type <nom de fichier>\n
 sw_terminal_msg52 = Destination inaccessible
 sw_terminal_msg53 = Ping non support\u00e9 sur les adresses de diffusion.
 sw_terminal_msg54 = Fichier n'existe pas
 sw_terminal_msg55 = Avorter avec Ctrl+C
-sw_terminal_msg56 = Envoyer une r\u00e9ponse de l'ARP\n \
-                      Usage: arpsend sender_ip target_ip\n \
-                        sender_ip - l'adresse ip pour propre adresse MAC\n \
-                        target_ip - l'adresse IP du destinataire
 sw_terminal_msg57 = \n\n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ sSSs   .S  S.       .S   .S       S.     sSSs  \n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ d%%SP  .SS  SS.     .SS  .SS       SS.   d%%SP   \n \
@@ -722,8 +768,6 @@ sw_terminal_msg57 = \n\n \
 
 sw_terminal_msg58 = le courrier est traité par
 
-sw_terminal_trace_msg1 = Usage: traceroute <destination> \n \
-                    <destination> est une adresse IP ou un nom de domaine.
 sw_terminal_trace_msg2 = Erreur: impossible de se connecter au serveur DNS.
 sw_terminal_trace_msg3 = Erreur: le nom de domaine n\u2019a pas pu \u00eatre r\u00e9solu.
 sw_terminal_trace_msg4 = \u00c9tablissement de la connexion avec %s (en %s sauts max.).
