add cls to list of available terminal commands

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -646,6 +646,7 @@ sw_terminal_msg25 = Liste verf\u00fcgbarer Befehle:\n \
 					arpsend       versende eine ARP-Antwort\n \
 					cat / type    zeige Dateiinhalt an \n \
 					cd            Verzeichnis wechseln\n \
+					cls           Anzeige zurücksetzen\n \
 					copy / cp     Datei kopieren\n \
 					del / rm      l\u00f6sche Datei/Verzeichnis\n \
 					dir / ls      zeige Liste der Dateien im aktuellen Verzeichnis\n \
