--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -645,6 +645,7 @@ sw_terminal_msg25 = List of available commands:\n \
                     arpsend       send an ARP reply\n \
                     cat / type    show file contents \n \
 					cd            change directory\n \
+					cls           clear screen \n \
 					copy / cp     copy file\n \
 					del / rm      delete file/directory\n \
 					dir / ls      show list of files in current directory\n \
