--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -653,6 +653,7 @@ sw_terminal_msg25 = Liste des commandes disponibles:\n \
                     arp           affiche la table (ARP) de r\u00e9solution d\u2019adresses\n \
                     arpsend       envoyer une r\u00e9ponse de l'ARP\n \
 					cd            change le dossier courant\n \
+					cls           réinitialiser l'affichage\n \
 					copy / cp     copie un fichier\n \
                     cat / type    affiche le contenu d\u2019un fichier \n \
 					del / rm      supprime une fichier ou un dossier\n \
