--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -492,6 +492,7 @@ guievents_msg22 = WAN port already occupied!
 guievents_msg23 = LAN port already occupied!
 guievents_msg24 = WAN port
 guievents_msg25 = LAN port
+guievents_msg26 = Toggle wireless
 
 guihilfe_msg1 = Help
 guihilfe_msg2 = <html><head></head><body><h1>Error</h1>Helpfiles not found.</body></html>
