fix character encoding

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -152,7 +152,7 @@ fileexplorer_msg15 = Datei importieren
 fileexplorer_msg16 = Eingabe- und Ausgabedatei m\u00FCssen angegeben werden!
 fileexplorer_msg17 = Es muss ein Ordner ausgew\u00E4hlt werden!
 fileexplorer_msg18 = Sicher?
-fileexplorer_msg19 = Unzulï¿½ssiger Zielordner!
+fileexplorer_msg19 = Unzulässiger Zielordner!
 
 fileimporter_msg1 = Lokale Datei:
 fileimporter_msg2 = Neuer Name:
@@ -553,7 +553,7 @@ sw_serveranwendung_msg2 = Annahme von Verbindungsanfragen gestartet
 sw_serveranwendung_msg3 = Server-Socket geschlossen
 sw_serveranwendung_msg4 = Verbindung zu
 sw_serveranwendung_msg5 = hergestellt
-sw_serveranwendung_msg6 = Server-Socket konnte nicht geï¿½ffnet werden.
+sw_serveranwendung_msg6 = Server-Socket konnte nicht geöffnet werden.
 
 sw_servermitarbeiter_msg1 = Socket zu
 sw_servermitarbeiter_msg2 = geschlossen
@@ -613,7 +613,7 @@ sw_fileexplorer_msg3 = Datei existiert nicht oder ist zu gro\u00df (> 150KB)
 
 sw_fileimporter_msg1 = Datei konnte nicht importiert werden
 sw_fileimporter_msg2 = Datei erfolgreich importiert!
-sw_fileimporter_msg3 = Schlieï¿½en
+sw_fileimporter_msg3 = Schließen
 
 sw_terminal_msg1 = Anwendung
 sw_terminal_msg2 = ist bereits installiert.\n
@@ -647,7 +647,7 @@ sw_terminal_msg25 = Liste verf\u00fcgbarer Befehle:\n \
 					arpsend       versende eine ARP-Antwort\n \
 					cat / type    zeige Dateiinhalt an \n \
 					cd            Verzeichnis wechseln\n \
-					cls           Anzeige zurï¿½cksetzen\n \
+					cls           Anzeige zurücksetzen\n \
 					copy / cp     Datei kopieren\n \
 					del / rm      l\u00f6sche Datei/Verzeichnis\n \
 					dir / ls      zeige Liste der Dateien im aktuellen Verzeichnis\n \
@@ -721,8 +721,8 @@ sw_terminal_usage_touch = Usage: touch <file name>
 sw_terminal_usage_traceroute = Usage: traceroute <remote host> \n \
 								<remote host> the remote address as IP address or host name
 
-sw_terminal_msg26 = Verwende den Befehl 'help' um Liste der verfï¿½gbaren Befehle anzuzeigen\n \
-oder nutze 'help <Befehl>' fï¿½r weitere Infos zum Befehl.
+sw_terminal_msg26 = Verwende den Befehl 'help' um Liste der verfügbaren Befehle anzuzeigen\n \
+oder nutze 'help <Befehl>' für weitere Infos zum Befehl.
 sw_terminal_msg28 = hat die IP-Adresse
 sw_terminal_msg29 = Ung\u00fcltige Host-Angabe!\nNur korrekte URLs ohne Pfadangabe erlaubt.\n
 sw_terminal_msg30 = Hostname konnte nicht aufgel\u00f6st werden!\nEventuell ist kein DNS-Server verf\u00fcgbar.\n
@@ -845,7 +845,7 @@ jsidebar_tooltip_ipAddress = IP-Adresse(n)/Netzmaske (MAC)
 jsidebar_tooltip_gateway = Gateway
 jsidebar_tooltip_dnsServer = DNS-Server
 
-report_overview = ï¿½bersicht
+report_overview = Übersicht
 report_component_config = Komponenten
 report_base_config = Basiskonfiguration
 report_nics = Netzwerkschnittstellen
