--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -257,7 +257,7 @@ webserver_msg5 = Sous-dossier
 webserver_msg6 = Activer les h\u00f4tes virtuels
 
 desktoppanel_msg1 = Installation des logiciels
-desktoppanel_application=ï¿½cran d'accueil
+desktoppanel_application=Écran d'accueil
 
 installationsdialog_msg1 = Installation des logiciels
 installationsdialog_msg2 = Appliquer les modifications
@@ -486,7 +486,7 @@ guievents_msg8 = Table SAT
 guievents_msg9 = MAC
 guievents_msg10 = Port
 guievents_msg11 = Configurer
-guievents_msg12 = Une connexion avec ce composant existe dï¿½jï¿½.
+guievents_msg12 = Une connexion avec ce composant existe déjà.
 guievents_msg13 = Couleur
 guievents_msg14 = Style de police
 guievents_msg15 = Taille de police
@@ -496,8 +496,8 @@ guievents_msg18 = Plus grande
 guievents_msg19 = Normal
 guievents_msg20 = Italique
 guievents_msg21 = Gras
-guievents_msg22 = Port WAN occupï¿½!
-guievents_msg23 = Port LAN occupï¿½!
+guievents_msg22 = Port WAN occupé!
+guievents_msg23 = Port LAN occupé!
 guievents_msg24 = Port WAN
 guievents_msg25 = Port LAN
 guievents_msg26 = Basculer sans fil
@@ -561,7 +561,7 @@ sw_serveranwendung_msg2 = R\u00e9ception des requ\u00eates d\u00e9marr\u00e9e
 sw_serveranwendung_msg3 = Socket du serveur ferm\u00e9e
 sw_serveranwendung_msg4 = Connexion au socket
 sw_serveranwendung_msg5 =
-sw_serveranwendung_msg6 = Le socket du serveur n'a pas pu ï¿½tre initialisï¿½.
+sw_serveranwendung_msg6 = Le socket du serveur n'a pas pu être initialisé.
 
 sw_servermitarbeiter_msg1 = D\u00e9connexion du socket
 sw_servermitarbeiter_msg2 =
@@ -654,7 +654,7 @@ sw_terminal_msg25 = Liste des commandes disponibles:\n \
                     arp           affiche la table (ARP) de r\u00e9solution d\u2019adresses\n \
                     arpsend       envoyer une r\u00e9ponse de l'ARP\n \
 					cd            change le dossier courant\n \
-					cls           rï¿½initialiser l'affichage\n \
+					cls           réinitialiser l'affichage\n \
 					copy / cp     copie un fichier\n \
                     cat / type    affiche le contenu d\u2019un fichier \n \
 					del / rm      supprime une fichier ou un dossier\n \
@@ -768,7 +768,7 @@ sw_terminal_msg57 = \n\n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ SP      SP           SP                          \n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ Y       Y            Y                           \n\n
 
-sw_terminal_msg58 = le courrier est traitï¿½ par
+sw_terminal_msg58 = le courrier est traité par
 
 sw_terminal_trace_msg2 = Erreur: impossible de se connecter au serveur DNS.
 sw_terminal_trace_msg3 = Erreur: le nom de domaine n\u2019a pas pu \u00eatre r\u00e9solu.
@@ -828,7 +828,7 @@ rp_lauscher_msg3 = Source
 rp_lauscher_msg4 = Destination
 rp_lauscher_msg5 = Protocole
 rp_lauscher_msg6 = Couche
-rp_lauscher_msg7 = Commentaire / Dï¿½tail
+rp_lauscher_msg7 = Commentaire / Détail
 rp_lauscher_msg8 = R\u00e9seau
 rp_lauscher_msg9 = Internet
 rp_lauscher_msg10 = Transport
@@ -853,7 +853,7 @@ jsidebar_tooltip_ipAddress = Adresse IP/masque (Adresse MAC)
 jsidebar_tooltip_gateway = Passerelle
 jsidebar_tooltip_dnsServer = Serveur DNS
 
-report_overview = Exposï¿½ sommaire
+report_overview = Exposé sommaire
 report_component_config = Composants
 report_base_config = Configuration de base
 report_nics = Interfaces r\u00e9seau
