replace cable with connection make wireless an attribute of nic make type of host/notebook nic configurable

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -361,6 +361,7 @@ jhostkonfiguration_msg9 = MAC-Adresse
 jhostkonfiguration_msg10 = IP-Adresse als Name verwenden
 jhostkonfiguration_msg11 = IP-Weiterleitung aktivieren
 jhostkonfiguration_msg12 = MAC-Adresse als Name verwenden
+jhostkonfiguration_msg13 = Verwende drahtlose Netzwerkkarte / WLAN
 
 jmodemkonfiguration_msg1 = Name
 jmodemkonfiguration_msg2 = Auf eingehende Verbindungsanfrage warten
@@ -393,10 +394,10 @@ jvermittlungsrechnerkonfiguration_msg15 = Weiterleitungstabelle
 jvermittlungsrechnerkonfiguration_msg16 = Keine Verbindung
 jvermittlungsrechnerkonfiguration_msg17 = Allgemein
 jvermittlungsrechnerkonfiguration_msg18 = MAC-Adresse
-jvermittlungsrechnerkonfiguration_msg19 = Hinweis: Zum Umstecken von Kabelverbindungen:\n \
-					  1. Kabelverbindung ausw\u00e4hlen durch Klick auf Schaltfl\u00e4che links neben der Schnittstellenbezeichnung\n \
+jvermittlungsrechnerkonfiguration_msg19 = Hinweis: Zum Umstecken von Verbindungen:\n \
+					  1. Verbindung ausw\u00e4hlen durch Klick auf Schaltfl\u00e4che links neben der Schnittstellenbezeichnung\n \
 					  2. ausw\u00e4hlen der neuen Schnittstelle durch Klick auf die entsprechende Schaltfl\u00e4che\n \n \
-					  Sollte die Zielschnittstelle bereits belegt sein, so werden die Kabel vertauscht.
+					  Sollte die Zielschnittstelle bereits belegt sein, so werden die Verbindungen vertauscht.
 jvermittlungsrechnerkonfiguration_msg20 = Schlie\u00dfen
 jvermittlungsrechnerkonfiguration_msg21 = Fremdkomponenten
 jvermittlungsrechnerkonfiguration_msg22 = Lokale Schnittstellen
@@ -472,8 +473,8 @@ guievents_msg1 = Maximale Anzahl angeschlossener Ger\u00e4te \u00fcberschritten
 guievents_msg2 = Modem
 guievents_msg3 = Desktop anzeigen
 guievents_msg4 = Datenaustausch anzeigen
-guievents_msg5 = Kabel entfernen
-guievents_msg6 = Alle Kabel entfernen
+guievents_msg5 = Verbindung entfernen
+guievents_msg6 = Alle Verbindungen entfernen
 guievents_msg7 = L\u00f6schen
 guievents_msg8 = SAT Tabelle
 guievents_msg9 = MAC
@@ -493,7 +494,7 @@ guievents_msg22 = WAN-Anschluss bereits belegt!
 guievents_msg23 = LAN-Anschluss bereits belegt!
 guievents_msg24 = WAN-Anschluss
 guievents_msg25 = LAN-Anschluss
-guievents_msg26 = Kabellos umschalten
+guievents_msg26 = Drahtlose Verbindung nicht möglich
 
 guihilfe_msg1 = Hilfe
 guihilfe_msg2 = <html><head></head><body><h1>Fehler</h1>Hilfedateien nicht gefunden..</body></html>
@@ -533,11 +534,11 @@ hw_notebook_msg2 = Neues Notebook
 hw_rechner_msg1 = Rechner
 hw_rechner_msg2 = Neuer Rechner
 
-hw_switch_msg1 = Switch
+hw_switch_msg1 = Switch / WLAN
 
 hw_vermittlungsrechner_msg1 = Vermittlungsrechner
 hw_gateway_msg1 = Heimrouter
-hw_kabel_msg1 = Kabel
+hw_kabel_msg1 = Verbindung
 
 hw_verbindung_msg1 = Ein Port von den beiden ist schon belegt.
 
