--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -367,6 +367,7 @@ jhostkonfiguration_msg9 = Adresse MAC
 jhostkonfiguration_msg10 = Utiliser l\u2019adresse IP comme nom
 jhostkonfiguration_msg11 = Activer routage des paquets
 jhostkonfiguration_msg12 = Utiliser l\u2019adresse MAC comme nom
+jhostkonfiguration_msg13 = Utiliser le réseau sans fil / WiFi
 
 jmodemkonfiguration_msg1 = Nom
 jmodemkonfiguration_msg2 = Attendre les connexions entrantes
@@ -500,7 +501,7 @@ guievents_msg22 = Port WAN occupé!
 guievents_msg23 = Port LAN occupé!
 guievents_msg24 = Port WAN
 guievents_msg25 = Port LAN
-guievents_msg26 = Basculer sans fil
+guievents_msg26 = Connexion sans fil impossible
 
 guihilfe_msg1 = Aide
 guihilfe_msg2 = <html><head></head><body><h1>Erreur</h1>Fichiers d&#8217;aide introuvables.</body></html>
@@ -541,11 +542,11 @@ hw_notebook_msg2 = Portable
 hw_rechner_msg1 = Ordinateur
 hw_rechner_msg2 = Ordinateur
 
-hw_switch_msg1 = Switch
+hw_switch_msg1 = Switch / WiFi
 
 hw_vermittlungsrechner_msg1 = Routeur
 hw_gateway_msg1 = Routeur Domestique
-hw_kabel_msg1 = Cable
+hw_kabel_msg1 = Connexion
 
 hw_verbindung_msg1 = L\u2019un des deux ports est d\u00e9j\u00e0 occup\u00e9.
 
