Fix typos in Readme and application

--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -105,8 +105,8 @@ emailanwendung_msg46 = Wrong or incomplete data!
 emailanwendung_msg47 = There is no email account yet.
 
 emailserver_msg1 = Start
-emailserver_msg2 = POP3 and SMTP server are activated.
-emailserver_msg3 = POP3 und SMTP server are stopped.
+emailserver_msg2 = POP3 and SMTP servers are activated.
+emailserver_msg3 = POP3 and SMTP servers are stopped.
 emailserver_msg4 = Mail domain:
 emailserver_msg5 = Set domain
 emailserver_msg6 = Set domain when server is not started!
@@ -127,7 +127,7 @@ emailserver_msg20 = Last name
 emailserver_msg21 = First name
 emailserver_msg22 = The account
 emailserver_msg23 = was built.
-emailserver_msg24 = User names may not contain whitespaces!
+emailserver_msg24 = User names may not contain whitespace!
 emailserver_msg25 = Enter user and password!
 emailserver_msg26 = New account
 emailserver_msg27 = Account list
@@ -339,9 +339,9 @@ jfirewalldialog_msg33 = accept
 jfirewalldialog_msg34 = drop
 jfirewalldialog_msg35 = Port
 jfirewalldialog_msg36 = Default action, if no rule matches:
-jfirewalldialog_msg37 = The following rule are evaluated from top to bottom. For the first matching rule the given action will be used.\nAll fields (except protocol and action) are optional. Empty fields will not be considered for packet filtering.\nIf an IP address is used, then the subnet mask has to be filled in as well! A subnet mask different to 255.255.255.255 can be used to address whole subnet ranges.\nUsing the default policy switch the approach can be toggled from blacklisting to whitelisting and vice versa.
+jfirewalldialog_msg37 = The following rules are evaluated from top to bottom. For the first matching rule the given action will be used.\nAll fields (except protocol and action) are optional. Empty fields will not be considered for packet filtering.\nIf an IP address is used, then the subnet mask has to be filled in as well! A subnet mask different to 255.255.255.255 can be used to address whole subnet ranges.\nUsing the default policy switch the approach can be toggled from blacklisting to whitelisting and vice versa.
 jfirewalldialog_msg38 = Activate firewall
-jfirewalldialog_msg39 = Firewall rules will only be applied, if the firewall is activated. In the case of a not activated firewall no packet filtering will take place.
+jfirewalldialog_msg39 = Firewall rules will only be applied if the firewall is activated. In the case of a not activated firewall no packet filtering will take place.
 jfirewalldialog_msg40 = Filter ICMP packets
 jfirewalldialog_msg41 = All ICMP packets, e.g., ping requests, will be dropped.
 jfirewalldialog_msg42 = only drop SYN packets
@@ -425,7 +425,7 @@ jweiterleitungstabelle_msg4 = Netmask
 jweiterleitungstabelle_msg5 = Next gateway
 jweiterleitungstabelle_msg6 = NIC
 
-framesoftwarewizard_msg1 = Software assisstant
+framesoftwarewizard_msg1 = Software assistant
 framesoftwarewizard_msg2 = Back
 framesoftwarewizard_msg3 = Next
 framesoftwarewizard_msg4 = Step 1 of 3
@@ -434,18 +434,18 @@ framesoftwarewizard_msg6 = Step 2 of 3
 framesoftwarewizard_msg7 = Step 3 of 3
 framesoftwarewizard_msg8 = Finish
 
-panelcompiler_msg1 = Compile files for Programme
-panelcompiler_msg2 = <h3>Errors during building the Programme</h3> <p>Compile could not be completed. <br> \
+panelcompiler_msg1 = Compile files for program
+panelcompiler_msg2 = <h3>Errors while building the program</h3> <p>Compilation could not be completed. <br> \
                  The reason might be that the wrong Java VM is used for execution (VM of the JDK is required). </p>
-panelcompiler_msg3 = <h3>Programme built successfully!</h3>
-panelcompiler_msg4 = <p>Programme could not be inserted</p>
+panelcompiler_msg3 = <h3>Program built successfully!</h3>
+panelcompiler_msg4 = <p>Program could not be inserted</p>
 
 panelverwaltung_msg1 = Build new software
 panelverwaltung_msg2 = Client program
 panelverwaltung_msg3 = Server program
 panelverwaltung_msg4 = Software name:
 panelverwaltung_msg5 = Class name:
-panelverwaltung_msg7 = Edit selected programme (after changes restart of Filius necessary)
+panelverwaltung_msg7 = Edit selected program (after changes restart of Filius necessary)
 panelverwaltung_msg8 = Delete entry
 panelverwaltung_msg9 = Save changes
 panelverwaltung_msg10 = Software name
@@ -517,7 +517,7 @@ guimainmemu_msg16 = Adjust Simulation Velocity
 guimainmemu_msg17 = Do you want to overwrite the existing file?
 
 infodialog_msg1 = Information
-infodialog_msg2 = <html><p><b>FILIUS</b> was developed as student project at the Universit&auml;t Siegen. (2006-2007)</p>
+infodialog_msg2 = <html><p><b>FILIUS</b> was developed as a student project at the Universit&auml;t Siegen. (2006-2007)</p>
 infodialog_msg3 = Students: 
 infodialog_msg4 = Tutor: 
 infodialog_msg5 = Maintenance and Further Development:
@@ -598,7 +598,7 @@ sw_firewall_msg7 = Delete port rule.
 sw_firewall_msg8 = Firewall rule matched:
 sw_firewall_msg9 = No firewall rule matched. Using default policy:
 
-sw_firewallweblog_msg1 = <html>\n\t<head>\n\t\t<title>Log-data set entry of the firewall</titel>
+sw_firewallweblog_msg1 = <html>\n\t<head>\n\t\t<title>Log-data set entry of the firewall</title>
 sw_firewallweblog_msg2 = \n\t</head>\n\t<body>\n\t\t<h2>Log-data set entry of the firewall</h2>
 
 sw_vermittlungweb_msg1 = This table is generated and updated by the Routing Information Protocol (RIP).
@@ -617,7 +617,7 @@ sw_fileimporter_msg3 = Close
 
 sw_terminal_msg1 = Application
 sw_terminal_msg2 = is already installed.\n
-sw_terminal_msg3 = successfull installed\n
+sw_terminal_msg3 = successfully installed\n
 sw_terminal_msg4 = IP address . . .:
 sw_terminal_msg5 = Netmask. . . . .:
 sw_terminal_msg6666= Physical address:
@@ -627,7 +627,7 @@ sw_terminal_msg7 = |   Destination   |     Netmask     |     Gateway     |    In
                    -------------------------------------------------------------------------\n
 sw_terminal_msg8 = Directory is empty\n
 sw_terminal_msg9 = Directory
-sw_terminal_msg10 = \nNumber of dorectories:
+sw_terminal_msg10 = \nNumber of directories:
 sw_terminal_msg11 = \nNumber of files:
 sw_terminal_msg12 = Error in Touch\n
 sw_terminal_msg13 = File  created\n
@@ -806,7 +806,7 @@ sw_ip_msg6 = !
 sw_weiterleitungstabelle_msg1 = Manual entries
 
 sw_httpnachricht_msg1 = Information
-sw_httpnachricht_msg2 = Successfull operation
+sw_httpnachricht_msg2 = Successful operation
 sw_httpnachricht_msg3 = Relocation
 sw_httpnachricht_msg4 = Client error
 sw_httpnachricht_msg5 = Server error
