Implement icon theme sets: Home network, enterprise and symbolic icons.
The corresponding icons are not yet included.

--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -515,6 +515,7 @@ guimainmemu_msg14 = Change to Documentation Mode
 guimainmemu_msg15 = Current Simulation Velocity
 guimainmemu_msg16 = Adjust Simulation Velocity
 guimainmemu_msg17 = Do you want to overwrite the existing file?
+guimainmemu_msg18 = Select Hardware Icon Theme
 
 infodialog_msg1 = Information
 infodialog_msg2 = <html><p><b>FILIUS</b> was developed as a student project at the Universit&auml;t Siegen. (2006-2007)</p>
