Make Computer name more specific.

--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -349,7 +349,7 @@ jfirewalldialog_msg43 = New connection requests to blocked ports will be dropped
 jfirewalldialog_msg44 = General
 
 jhostkonfiguration_msg1 = Name
-jhostkonfiguration_msg2 = New Computer
+jhostkonfiguration_msg2 = New Server
 jhostkonfiguration_msg3 = IP Address
 jhostkonfiguration_msg4 = Netmask
 jhostkonfiguration_msg5 = Gateway
@@ -531,8 +531,8 @@ infodialog_msg11 = Contributors:
 hw_notebook_msg1 = Notebook
 hw_notebook_msg2 = New Notebook
 
-hw_rechner_msg1 = Computer
-hw_rechner_msg2 = New Computer
+hw_rechner_msg1 = Server
+hw_rechner_msg2 = New Server
 
 hw_switch_msg1 = Switch / WiFi
 
